--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </nav>
     <section class="home background">
-        <img src="/picture/bm.jpeg" alt="">
+        <img src="picture/bm.jpeg" alt="">
     </section>
     <script>
         var prevScrollpos = window.pageYOffset;
